--- a/reg/startup.html
+++ b/reg/startup.html
@@ -217,7 +217,7 @@
                     <a href="../startups/">Student Start-Ups</a>
                   </td>
                   <td>
-                    DreakAI | Peer4Peer | Wavefrnt | TressCO2 | StyllShirts
+                    DreamAI | Peer4Peer | Wavefrnt | TressCO2 | Styll Shirt
                   </td>
                   <td>
                     <a
