Fix typo of a fix typo

--- a/reg/startup.html
+++ b/reg/startup.html
@@ -217,7 +217,7 @@
                     <a href="../startups/">Student Start-Ups</a>
                   </td>
                   <td>
-                    DreamAI | Peer4Peer | Wavefrnt | TressCO2 | Styll Shirt
+                    DreamAI | Peer4Peer | Wavefrnt | TressCO2 | Styll Shirts
                   </td>
                   <td>
                     <a
