done now... hopefully?

--- a/startups/index.html
+++ b/startups/index.html
@@ -202,9 +202,9 @@
           <br>
           
           <div class="col-md-12">
-            <h2 class="text-center text-md-left">StyllShirts</h2>
+            <h2 class="text-center text-md-left">Styll Shirts</h2>
             <p>
-                Blurb coming soon...
+              Styll Shirts is an e-commerce clothing brand focused on emphasizing the importance of diversity in Canadian society. Featuring a line of minimal t-shirts each displaying a unique phrase, Styll Shirts is bringing awareness to the multicultural dialects that comprise Canadian pop culture. Today, their shirts can be seen on Canadian influencers, artists, entrepreneurs, and students alike. 
             </p>
           </div>
 
@@ -231,7 +231,7 @@
           <div class="col-md-12">
             <h2 class="text-center text-md-left">Wavefrnt</h2>
             <p>
-              Blurb coming soon...
+              Wavefrnt is an online platform to build & share innovative projects and startups with global like-minded peers. There are two parts to a great project: The idea, and the execution. One cannot exist without the other, but how do you find both? You need a great team. We’re often either stuck with ideas we don’t feel passionate about or lack the expertise to make them a reality. Wavefrnt brings those two groups together to work on awesome projects and build meaningful connections with other ambitious teenagers.
             </p>
           </div>
         </div>
