Innovate for Impact (no more dying involved👍 )

--- a/sprint/index.html
+++ b/sprint/index.html
@@ -87,7 +87,7 @@
       </div>
       <div class="text-center">
         This Year's Theme:
-        <h1 class="display-4">Innovate or Die</h1>
+        <h1 class="display-4">Innovate for Impact</h1>
       </div>
       <div class="text-center text-md-right">
         <h4>The challenge kicks off in</h4>
@@ -116,7 +116,7 @@
           <br>
           <h3>Why SPRINT?</h3>
           <p>
-            In a world filled with Zoom meetings and mask-wearing one constant remains: Innovate or Die. We must continuously seek ways to ideate, create, and adapt to stay alive - and thrive. At SPRINT, you will be given the opportunity to immerse yourself in an eight-week virtual incubator to reimagine society by bringing your most disruptive ideas to life.
+            In a world filled with Zoom meetings and mask-wearing one constant remains: Innovate for Impact. We must continuously seek ways to ideate, create, and adapt to stay alive - and thrive. At SPRINT, you will be given the opportunity to immerse yourself in an eight-week virtual incubator to reimagine society by bringing your most disruptive ideas to life.
           </p>
           <hr>
           <br>
