add setup clarification

--- a/reg/pin.html
+++ b/reg/pin.html
@@ -160,6 +160,7 @@
 
           <p id="loading" class="pl-2 d-none">Loading...</p>
           <div id="footer">
+            <div id="reminder"></div>
             <hr />
             <p>
               If you forgot your pin or want to report a problem, please<a
@@ -243,6 +244,8 @@
       if (setup) {
         document.getElementById("state").innerHTML =
           "<h1 id='title'>Setup your pin:</h1><p>Please enter a 6 digit number. You can only set this pin <strong>Once</strong><p>";
+        document.getElementById("reminder").innerHTML =
+          "<p3>This is the first time you are accessesing your personal schedule.</p3><p>Please type in a six digit combination which will serve as your pin(don't forget it!)</p>";
       }
 
       function access(pin) {
