--- a/reg/pin.html
+++ b/reg/pin.html
@@ -245,7 +245,7 @@
         document.getElementById("state").innerHTML =
           "<h1 id='title'>Setup your pin:</h1><p>Please enter a 6 digit number. You can only set this pin <strong>Once</strong><p>";
         document.getElementById("reminder").innerHTML =
-          "<p3>This is the first time you are accessesing your personal schedule.</p3><p>Please type in a six digit combination which will serve as your pin(don't forget it!)</p>";
+          "<p3>This is the first time you are accessesing your personal schedule.</p3><p>Please type in a six digit combination which will serve as your pin (don't forget it)!</p>";
       }
 
       function access(pin) {
