--- a/team/index.html
+++ b/team/index.html
@@ -1223,6 +1223,21 @@
                   </div>
                 </div>
               </div>
+              <div class="col-sm-4">
+                <div class="row mt-4 mb-4">
+                  <div class="col-sm-4">
+                    <img
+                      class="img-fluid rounded-circle"
+                      src="../img/ambassadors/jsmith.jpg"
+                      alt="Jade Smith"
+                    />
+                  </div>
+                  <div class="col-sm-8">
+                    <h4 class="card-title">Jade Smith</h4>
+                    <h5>Havergal College</h5>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
