--- a/reg/linkhub.html
+++ b/reg/linkhub.html
@@ -326,7 +326,7 @@
                       >Join</a
                     >
                   </td>
-                  <td>TBD</td>
+                  <td>Dr. George Elliott Clarke</td>
                 </tr>
                 <tr>
                   <td>11:25-12:55</td>
