sprint banner added

--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
           <!-- Makes the banner closeable -->
           Registration is <b>LIVE</b>. Check the button in the navbar!
         </div>
+        <div class="alert bg-danger text-center fade show" role="alert">
+          <button type="button" class="close" data-bs-dismiss="alert">
+            &times;
+          </button>
+          <!-- Makes the banner closeable -->
+          Apply for SPRINT now! More details can be found on the <a href="sprint/index.html">SPRINT page</a>.
+        </div>
+      </div>
       </div>
       <div class="container">
         <div class="text-center text-md-left">
