--- a/index.html
+++ b/index.html
@@ -130,39 +130,46 @@
 
     <div class="index-welcome">
       <div class="container" color="red">
-        <div class="alert bg-danger text-center fade show" role="alert">
-          <button type="button" class="close" data-bs-dismiss="alert">
-            &times;
-          </button>
-          <!-- Makes the banner closeable -->
-          Registration is <b>LIVE</b>. Check the button in the navbar!
-        </div>
-        <div class="alert bg-danger text-center fade show" role="alert">
-          <button type="button" class="close" data-bs-dismiss="alert">
-            &times;
-          </button>
-          <!-- Makes the banner closeable -->
-          Apply for SPRINT now! More details can be found on the <a href="sprint/index.html">SPRINT page</a>.
-        </div>
-      </div>
-      </div>
-      <div class="container">
-        <div class="text-center text-md-left">
-          <h2>Welcome to the 2021</h2>
-          <h1>World Affairs Conference</h1>
-          <h3 class="display-5">February 6th</h3>
-        </div>
-        <div class="text-center">
-          This Year's Theme:
-          <h1 class="display-4">Together Towards Tomorrow</h1>
-        </div>
-        <div class="text-center text-md-right">
-          <h4>The Conference is</h4>
-          <h3><span id="countdown"></span></h3>
+        <div id="alerts" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="3500">
+              <div class="alert bg-danger text-center fade show" role="alert">
+                <button type="button" class="close" data-bs-dismiss="alert">
+                  &times;
+                </button>
+                <!-- Makes the banner closeable -->
+                Registration is <b>LIVE</b>. Check the button in the navbar!
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="3500">
+              <div class="alert bg-danger text-center fade show" role="alert">
+                <button type="button" class="close" data-bs-dismiss="alert">
+                  &times;
+                </button>
+                <!-- Makes the banner closeable -->
+                Apply for SPRINT now! More details can be found on the
+                <a href="sprint/index.html">SPRINT page</a>.
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
+    <div class="container">
+      <div class="text-center text-md-left">
+        <h2>Welcome to the 2021</h2>
+        <h1>World Affairs Conference</h1>
+        <h3 class="display-5">February 6th</h3>
+      </div>
+      <div class="text-center">
+        This Year's Theme:
+        <h1 class="display-4">Together Towards Tomorrow</h1>
+      </div>
+      <div class="text-center text-md-right">
+        <h4>The Conference is</h4>
+        <h3><span id="countdown"></span></h3>
+      </div>
+    </div>
     <div class="container">
       <div class="card card-body mt-3 mx-3">
         <div class="row">
