--- a/reg/linkhub.html
+++ b/reg/linkhub.html
@@ -341,12 +341,24 @@
                   <td>N/A</td>
                 </tr>
                 <tr>
-                  <td>13:20-14:00</td>
+                  <td>13:20-14:10</td>
                   <td>Closing Panel</td>
                   <td>
                     <a class="main text-white btn btn-secondary btn-sm">Join</a>
                   </td>
                   <td>Eva & Allen Lau | Krishna B.| Lauren M.</td>
+                </tr>
+                <tr>
+                  <td>14:10-14:40</td>
+                  <td>Student Startup Exhibition</td>
+                  <td>
+                    <a
+                      class="btn text-white btn-secondary btn-sm"
+                      href="https://zoom.us/j/4605092111?pwd=eGRiL2p4blNleVIrNnAzQnNOQWxiUT09"
+                      >Join</a
+                    >
+                  </td>
+                  <td>N/A</td>
                 </tr>
               </tbody>
             </table>
