--- a/schedule/index.html
+++ b/schedule/index.html
@@ -213,12 +213,21 @@
               </tr>
               <tr>
                 <td><a href="../addresses/index.html">Closing Address</a></td>
-                <td>1:20 to 2:00pm</td>
+                <td>1:20 to 2:10pm</td>
                 <td>GoToWebinar</td>
               </tr>
               <tr>
+                <td>
+                  <a href="../startups/index.html"
+                    >Student Startup Exhibition</a
+                  >
+                </td>
+                <td>2:10 to 2:40 pm</td>
+                <td>Zoom</td>
+              </tr>
+              <tr>
                 <td>Dismissal</td>
-                <td>2:00pm</td>
+                <td>2:40pm</td>
                 <td></td>
               </tr>
             </tbody>
