update sprint message

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 
     <div class="index-welcome">
       <div class="container" color="red">
+        <!--
         <div id="alerts" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3500">
@@ -137,11 +138,11 @@
                 <button type="button" class="close" data-bs-dismiss="alert">
                   &times;
                 </button>
-                <!-- Makes the banner closeable -->
                 Registration is <b>LIVE</b>. Check the button in the navbar!
               </div>
             </div>
-            <div class="carousel-item" data-bs-interval="3500">
+          
+            <div class="carousel-item" data-bs-interval="3500">-->
               <div class="alert bg-danger text-center fade show" role="alert">
                 <button type="button" class="close" data-bs-dismiss="alert">
                   &times;
@@ -150,7 +151,9 @@
                 Apply for SPRINT now! More details can be found on the
                 <a href="sprint/index.html">SPRINT page</a>.
               </div>
+              <!--
             </div>
+          -->
           </div>
         </div>
       </div>
