⌛post conference (remove registration+update recording link)

--- a/faq/index.html
+++ b/faq/index.html
@@ -109,14 +109,6 @@
               >SPRINT</a
             >
           </li>
-          <li class="nav-item">
-            <a
-              class="btn btn-outline-primary"
-              href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage"
-              data-proofer-ignore
-              >Register</a
-            >
-          </li>
         </ul>
       </div>
     </nav>
@@ -263,9 +255,7 @@
               aria-labelledby="heading-costofsprint"
             >
               <div class="card-body">
-                <p>
-                  No, it is absolutely free!
-                </p>
+                <p>No, it is absolutely free!</p>
               </div>
             </div>
           </div>
@@ -290,7 +280,8 @@
             >
               <div class="card-body">
                 <p>
-                  After completing the form associated with the application process, acceptances will be sent out on a later date.
+                  After completing the form associated with the application
+                  process, acceptances will be sent out on a later date.
                 </p>
               </div>
             </div>
@@ -319,9 +310,7 @@
               aria-labelledby="heading-whattimesdoalloftheseeventshappen"
             >
               <div class="card-body">
-                <p>
-                  Click the red "SPRINT" button in the navbar!
-                </p>
+                <p>Click the red "SPRINT" button in the navbar!</p>
               </div>
             </div>
           </div>
