--- a/index.html
+++ b/index.html
@@ -116,21 +116,12 @@
               >SPRINT</a
             >
           </li>
-          <li class="nav-item">
-            <a
-              class="btn btn-outline-primary"
-              href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage"
-              data-proofer-ignore
-              >Register</a
-            >
-          </li>
         </ul>
       </div>
     </nav>
 
     <div class="index-welcome">
       <div class="container" color="red">
-        <!--
         <div id="alerts" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3500">
@@ -138,11 +129,12 @@
                 <button type="button" class="close" data-bs-dismiss="alert">
                   &times;
                 </button>
-                Registration is <b>LIVE</b>. Check the button in the navbar!
+                Recordings of WAC 2021 is available! Check it
+                <a href="./schedule/"> here</a>!
               </div>
             </div>
-          
-            <div class="carousel-item" data-bs-interval="3500">-->
+
+            <div class="carousel-item" data-bs-interval="3500">
               <div class="alert bg-danger text-center fade show" role="alert">
                 <button type="button" class="close" data-bs-dismiss="alert">
                   &times;
@@ -151,9 +143,7 @@
                 Apply for SPRINT now! More details can be found on the
                 <a href="sprint/index.html">SPRINT page</a>.
               </div>
-              <!--
             </div>
-          -->
           </div>
         </div>
       </div>
@@ -259,14 +249,14 @@
           );
         } else if (t < 0 && t > -86400000) {
           //86400000 is 1000*60*60*24, one whole day in millis
-          return "In Progress!";
+          return "Today!";
         } else {
           return "Over!";
         }
         console.log(t);
       }
       window.setInterval(function () {
-        $("#countdown").html(getTimeRemaining(wacdate));
+        $("#countdown").html("Over!");
       }, 1000);
     </script>
 
