--- a/schedule/index.html
+++ b/schedule/index.html
@@ -104,131 +104,174 @@
               >SPRINT</a
             >
           </li>
-          <li class="nav-item">
-            <a
-              class="btn btn-outline-primary"
-              href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage"
-              data-proofer-ignore
-              >Register</a
-            >
-          </li>
         </ul>
       </div>
     </nav>
 
     <div class="container">
-      <div
-        class="modal fade"
-        id="alertModal"
-        tabindex="-1"
-        aria-labelledby="alertModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="alertModalLabel">Select Plenaries</h5>
-              <a
-                class="btn btn-sm text-black"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              >
-                <h3>&#215;</h3>
-              </a>
-            </div>
-            <div class="modal-body">
-              <h4>Have you selected your plenaries yet?</h4>
-              Click continue to go to your personal schedule where you could
-              select your plenaries for WAC 2021!
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal"
-              >
-                Close
-              </button>
-              <a href="../reg/linkhub.html" class="btn btn-primary">
-                Continue
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="card card-body">
-        <h1 class="text-center">WAC Regular Stream</h1>
+        <h1 class="text-center">WAC 2021 Recordings</h1>
         <h2 class="text-center">Febuary 6th, Conference Day</h2>
-        <h4 class="text-center">Note: All times listed are in EST.</h4>
-        <a href="../reg/linkhub.html" class="btn btn-primary mt-3">
-          Personal Schedule: Webinar Links + Plenary Selection
-        </a>
         <div class="table-responsive">
           <table class="table table-hover my-4">
             <thead class="thead-dark">
               <tr>
                 <th>Event</th>
-                <th>Time</th>
-                <th>Location</th>
+                <th>Speaker</th>
+                <th>Recording</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td><a href="../addresses/index.html">Opening Address</a></td>
-                <td>9:00 to 9:40am</td>
-                <td>GoToWebinar</td>
-              </tr>
-              <tr>
-                <td><a href="../plenaries/index.html">Plenary #1</a></td>
-                <td>9:50 to 10:15am</td>
-                <td>GoToWebinar</td>
-              </tr>
-              <tr>
-                <td>Networking (Optional)</td>
-                <td>10:20 to 10:40am</td>
-                <td>Zoom</td>
-              </tr>
-              <tr>
-                <td><a href="../plenaries/index.html">Plenary #2</a></td>
-                <td>10:45 to 11:10am</td>
-                <td>GoToWebinar</td>
-              </tr>
-              <tr>
+                <td>Opening Address</td>
+                <td>Krishna B. | Lauren M. | Andrew C.</td>
                 <td>
-                  <a href="../startups/index.html">Startup Exhibition</a> &amp;
-                  Lunch (Optional)
-                </td>
-                <td>11:15 to 11:45am</td>
-                <td>Zoom</td>
-              </tr>
-              <tr>
-                <td><a href="../keynote/index.html">Keynote Speaker</a></td>
-                <td>11:50 to 12:40pm</td>
-                <td>GoToWebinar</td>
-              </tr>
-              <tr>
-                <td>Networking (Optional)</td>
-                <td>12:45 to 1:15pm</td>
-                <td>Zoom</td>
-              </tr>
-              <tr>
-                <td><a href="../addresses/index.html">Closing Address</a></td>
-                <td>1:20 to 2:10pm</td>
-                <td>GoToWebinar</td>
-              </tr>
-              <tr>
-                <td>
-                  <a href="../startups/index.html"
-                    >Student Startup Exhibition</a
+                  <a
+                    class="btn btn-outline-danger"
+                    href="https://attendee.gotowebinar.com/recording/3450970488729698305"
+                    ><i class="fas fa-dot-circle"></i> Recording Available</a
                   >
                 </td>
-                <td>2:10 to 2:40 pm</td>
-                <td>Zoom</td>
               </tr>
               <tr>
-                <td>Dismissal</td>
-                <td>2:40pm</td>
+                <td>
+                  <h4><strong>Plenary 1</strong></h4>
+                </td>
                 <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td class="table-secondary">
+                  Businesses in COVID: Sink or Swim
+                </td>
+                <td class="table-secondary">Opher Baron</td>
+                <td>
+                  <a
+                    class="btn btn-outline-danger"
+                    href="https://attendee.gotowebinar.com/recording/8050553083151555344"
+                    ><i class="fas fa-dot-circle"></i> Recording Available</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td class="table-secondary">
+                  Commercial Space Flight: The Future of Humanity
+                </td>
+                <td class="table-secondary">Janet Ivey</td>
+                <td>
+                  <a
+                    class="btn btn-outline-danger"
+                    href="https://attendee.gotowebinar.com/recording/3182153089871025928"
+                    ><i class="fas fa-dot-circle"></i> Recording Available</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td class="table-secondary">
+                  Social Justice: Our History and Future
+                </td>
+                <td class="table-secondary">Mehrdad Baghai</td>
+                <td>
+                  <a
+                    class="btn btn-outline-danger"
+                    href="https://attendee.gotowebinar.com/recording/6560317903817450243"
+                    ><i class="fas fa-dot-circle"></i> Recording Available</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td class="table-secondary">
+                  The Future of Social Media: We are the Product
+                </td>
+                <td class="table-secondary">David Caroll</td>
+                <td>
+                  <a
+                    class="btn btn-outline-danger"
+                    href="https://attendee.gotowebinar.com/recording/1221760141430136838"
+                    ><i class="fas fa-dot-circle"></i> Recording Available</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <h4><strong>Plenary 2</strong></h4>
+                </td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td class="table-secondary">
+                  Businesses in COVID: Sink or Swim
+                </td>
+                <td class="table-secondary">Bharat Masrani</td>
+                <td>
+                  <a
+                    class="btn btn-outline-danger"
+                    href="https://attendee.gotowebinar.com/recording/6917630595543172368"
+                    ><i class="fas fa-dot-circle"></i> Recording Available</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td class="table-secondary">
+                  Commercial Space Flight: The Future of Humanity
+                </td>
+                <td class="table-secondary">Dr. Louis Friedman</td>
+                <td>
+                  <a
+                    class="btn btn-outline-danger"
+                    href="https://attendee.gotowebinar.com/recording/404647080132967184"
+                    ><i class="fas fa-dot-circle"></i> Recording Available</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td class="table-secondary">
+                  Social Justice: Our History and Future
+                </td>
+                <td class="table-secondary">Ajani Charles</td>
+                <td>
+                  <a
+                    class="btn btn-outline-danger"
+                    href="https://attendee.gotowebinar.com/recording/4879705584669658896"
+                    ><i class="fas fa-dot-circle"></i> Recording Available</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td class="table-secondary">
+                  The Future of Social Media: We are the Product
+                </td>
+                <td class="table-secondary">Producers of The Social Dilemma</td>
+                <td>
+                  <a
+                    class="btn btn-outline-danger"
+                    href="https://attendee.gotowebinar.com/recording/8303293422982759696"
+                    ><i class="fas fa-dot-circle"></i> Recording Available</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>Keynote Speaker</td>
+                <td>Dr. George Elliott Clarke</td>
+                <td>
+                  <a
+                    class="btn btn-outline-danger"
+                    href="https://attendee.gotowebinar.com/recording/2076456709190632456"
+                    ><i class="fas fa-dot-circle"></i> Recording Available</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>Closing Panel</td>
+                <td>Allen Lau | Eva Lau | Krishna B. | Lauren M.</td>
+                <td>
+                  <a
+                    class="btn btn-outline-danger"
+                    href="https://attendee.gotowebinar.com/recording/3040673431170178064"
+                    ><i class="fas fa-dot-circle"></i> Recording Available</a
+                  >
+                </td>
               </tr>
             </tbody>
           </table>
@@ -290,9 +333,5 @@
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/tether.min.js"></script>
-    <script>
-      var alertM = new bootstrap.Modal(document.getElementById("alertModal"));
-      alertM.toggle();
-    </script>
   </body>
 </html>
