update table style

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -123,6 +123,13 @@
             </thead>
             <tbody>
               <tr>
+                <td>
+                  <h4><strong>Opening</strong></h4>
+                </td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
                 <td>Opening Address</td>
                 <td>Krishna B. | Lauren M. | Andrew C.</td>
                 <td>
@@ -141,10 +148,8 @@
                 <td></td>
               </tr>
               <tr>
-                <td class="table-secondary">
-                  Businesses in COVID: Sink or Swim
-                </td>
-                <td class="table-secondary">Opher Baron</td>
+                <td>Businesses in COVID: Sink or Swim</td>
+                <td>Opher Baron</td>
                 <td>
                   <a
                     class="btn btn-outline-danger"
@@ -154,10 +159,8 @@
                 </td>
               </tr>
               <tr>
-                <td class="table-secondary">
-                  Commercial Space Flight: The Future of Humanity
-                </td>
-                <td class="table-secondary">Janet Ivey</td>
+                <td>Commercial Space Flight: The Future of Humanity</td>
+                <td>Janet Ivey</td>
                 <td>
                   <a
                     class="btn btn-outline-danger"
@@ -167,10 +170,8 @@
                 </td>
               </tr>
               <tr>
-                <td class="table-secondary">
-                  Social Justice: Our History and Future
-                </td>
-                <td class="table-secondary">Mehrdad Baghai</td>
+                <td>Social Justice: Our History and Future</td>
+                <td>Mehrdad Baghai</td>
                 <td>
                   <a
                     class="btn btn-outline-danger"
@@ -180,10 +181,8 @@
                 </td>
               </tr>
               <tr>
-                <td class="table-secondary">
-                  The Future of Social Media: We are the Product
-                </td>
-                <td class="table-secondary">David Caroll</td>
+                <td>The Future of Social Media: We are the Product</td>
+                <td>David Caroll</td>
                 <td>
                   <a
                     class="btn btn-outline-danger"
@@ -200,10 +199,8 @@
                 <td></td>
               </tr>
               <tr>
-                <td class="table-secondary">
-                  Businesses in COVID: Sink or Swim
-                </td>
-                <td class="table-secondary">Bharat Masrani</td>
+                <td>Businesses in COVID: Sink or Swim</td>
+                <td>Bharat Masrani</td>
                 <td>
                   <a
                     class="btn btn-outline-danger"
@@ -213,10 +210,8 @@
                 </td>
               </tr>
               <tr>
-                <td class="table-secondary">
-                  Commercial Space Flight: The Future of Humanity
-                </td>
-                <td class="table-secondary">Dr. Louis Friedman</td>
+                <td>Commercial Space Flight: The Future of Humanity</td>
+                <td>Dr. Louis Friedman</td>
                 <td>
                   <a
                     class="btn btn-outline-danger"
@@ -226,10 +221,8 @@
                 </td>
               </tr>
               <tr>
-                <td class="table-secondary">
-                  Social Justice: Our History and Future
-                </td>
-                <td class="table-secondary">Ajani Charles</td>
+                <td>Social Justice: Our History and Future</td>
+                <td>Ajani Charles</td>
                 <td>
                   <a
                     class="btn btn-outline-danger"
@@ -239,10 +232,8 @@
                 </td>
               </tr>
               <tr>
-                <td class="table-secondary">
-                  The Future of Social Media: We are the Product
-                </td>
-                <td class="table-secondary">Producers of The Social Dilemma</td>
+                <td>The Future of Social Media: We are the Product</td>
+                <td>Producers of The Social Dilemma</td>
                 <td>
                   <a
                     class="btn btn-outline-danger"
@@ -250,6 +241,13 @@
                     ><i class="fas fa-dot-circle"></i> Recording Available</a
                   >
                 </td>
+              </tr>
+              <tr>
+                <td>
+                  <h4><strong>Closing</strong></h4>
+                </td>
+                <td></td>
+                <td></td>
               </tr>
               <tr>
                 <td>Keynote Speaker</td>
