🔴update "schedule" to "recordings"

--- a/keynote/index.html
+++ b/keynote/index.html
@@ -54,7 +54,7 @@
       </li>
       -->
       <li class="nav-item">
-        <a class="nav-link" href="../schedule/index.html">Schedule</a>
+        <a class="nav-link" href="../schedule/index.html">Recordings</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="../contact/index.html">Contact</a>
