--- a/sprint/index.html
+++ b/sprint/index.html
@@ -100,7 +100,7 @@
             <a class="nav-link" href="../faq/index.html">FAQ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../schedule/index.html">Schedule</a>
+            <a class="nav-link" href="../schedule/index.html">Recordings</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../contact/index.html">Contact</a>
