--- a/contact/index.html
+++ b/contact/index.html
@@ -88,7 +88,7 @@
       </li>
       -->
           <li class="nav-item">
-            <a class="nav-link" href="../schedule/index.html">Schedule</a>
+            <a class="nav-link" href="../schedule/index.html">Recordings</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="../contact/index.html">Contact</a>
