--- a/contact/index.html
+++ b/contact/index.html
@@ -153,10 +153,10 @@
           </div>
         </div>
         <div class="card-deck mt-2">
-          <div class="card card-body card-inverse bg-instagram card-full">
+          <div class="card card-body card-warning bg-warning card-full">
             <h2 class="card-title">
               <a
-                class="contact-color"
+                class="contact-color text-black"
                 href="https://instagram.com/WorldAffairsCon"
                 ><span class="fab fa-fw fa-instagram"></span>
                 @WorldAffairsCon</a
@@ -175,31 +175,27 @@
         </div>
       </div>
       <div class="d-md-none mt-2">
-        <button type="button" class="btn btn-danger btn-lg btn-block">
-          <a class="contact-color" href="mailto:wac@ucc.on.ca"
-            ><span class="fa fa-fw fa-envelope"></span> wac@ucc.on.ca</a
-          >
-        </button>
-        <button type="button" class="btn btn-primary btn-lg btn-block">
-          <a
-            class="contact-color"
-            href="https://www.facebook.com/worldaffairsconference/"
-            ><span class="fab fa-fw fa-facebook"></span> WAC</a
-          >
-        </button>
-        <button
-          type="button"
-          class="btn btn-inverse bg-instagram btn-lg btn-block"
+        <a href="mailto:wac@ucc.on.ca" class="btn btn-danger btn-lg btn-block">
+          <span class="fa fa-fw fa-envelope"></span> wac@ucc.on.ca
+        </a>
+        <a
+          href="https://www.facebook.com/worldaffairsconference/"
+          class="btn btn-primary btn-lg btn-block"
         >
-          <a class="contact-color" href="https://instagram.com/WorldAffairsCon"
-            ><span class="fab fa-fw fa-instagram"></span> @WorldAffairsCon</a
-          >
-        </button>
-        <button type="button" class="btn btn-info btn-lg btn-block">
-          <a class="contact-color" href="https://twitter.com/WorldAffairsCon"
-            ><span class="fab fa-fw fa-twitter"></span> @WorldAffairsCon</a
-          >
-        </button>
+          <span class="fab fa-fw fa-facebook"></span> WAC
+        </a>
+        <a
+          href="https://instagram.com/WorldAffairsCon"
+          class="btn btn-warning bg-warning btn-lg btn-block"
+        >
+          <span class="fab fa-fw fa-instagram"></span> @WorldAffairsCon
+        </a>
+        <a
+          class="btn btn-info btn-lg btn-block"
+          href="https://twitter.com/WorldAffairsCon"
+        >
+          <span class="fab fa-fw fa-twitter"></span> @WorldAffairsCon
+        </a>
       </div>
     </div>
 
