📽add youtube portal

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -274,6 +274,11 @@
             </tbody>
           </table>
         </div>
+        <a
+          class="btn btn-danger"
+          href="https://www.youtube.com/playlist?list=PL8L0nWYyyMljR9N6dJzrRWlxtwVaybhQw"
+          ><i class="fab fa-youtube"></i> Access Via Youtube</a
+        >
       </div>
     </div>
 
